--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,16 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c85e0908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import random\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dbf40dc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = \"D:\\\\ML_project\\\\Keystrokes_dataset\\\\files\"\n",
+    "SAMPLES_PER_USER = 150\n",
+    "NUM_USERS = 30\n",
+    "\n",
+    "random.seed(42)  # reproducibility\n",
+    "\n",
+    "all_users = []\n",
+    "\n",
+    "# Step 1: Get all .txt files\n",
+    "all_files = [\n",
+    "    file for file in os.listdir(DATA_DIR)\n",
+    "    if file.endswith(\".txt\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0acffb1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected 30 user files\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2: Randomly select 30 user files\n",
+    "selected_files = random.sample(all_files, NUM_USERS)\n",
+    "\n",
+    "print(f\"Selected {len(selected_files)} user files\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f9084653",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Process selected users only\n",
+    "for file in selected_files:\n",
+    "    file_path = os.path.join(DATA_DIR, file)\n",
+    "\n",
+    "    df = pd.read_csv(\n",
+    "        file_path,\n",
+    "        sep=\"\\t\",\n",
+    "        engine=\"python\",\n",
+    "        on_bad_lines=\"skip\"\n",
+    "    )\n",
+    "\n",
+    "# Remove duplicate keystroke entries\n",
+    "    df = df.drop_duplicates(\n",
+    "        subset=[\n",
+    "            \"PARTICIPANT_ID\",\n",
+    "            \"KEYSTROKE_ID\",\n",
+    "            \"PRESS_TIME\",\n",
+    "            \"RELEASE_TIME\"\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    if len(df) >= SAMPLES_PER_USER:\n",
+    "        df_sampled = df.sample(n=SAMPLES_PER_USER, random_state=42)\n",
+    "        all_users.append(df_sampled)\n",
+    "    else:\n",
+    "        print(f\"Skipped {file} (only {len(df)} rows after deduplication)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dcf2cbf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final dataset shape after deduplication: (4500, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 4: Combine all users\n",
+    "final_df = pd.concat(all_users, ignore_index=True)\n",
+    "\n",
+    "final_df = final_df.drop_duplicates(\n",
+    "    subset=[\n",
+    "        \"PARTICIPANT_ID\",\n",
+    "        \"KEYSTROKE_ID\",\n",
+    "        \"PRESS_TIME\",\n",
+    "        \"RELEASE_TIME\"\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(\"Final dataset shape after deduplication:\", final_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "839aa39c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV file saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "OUTPUT_PATH = \"D:\\\\ML_project\\\\Keystrokes_dataset\\\\final_dataset.csv\"\n",
+    "\n",
+    "final_df.to_csv(\n",
+    "    OUTPUT_PATH,\n",
+    "    index=False\n",
+    ")\n",
+    "\n",
+    "print(\"CSV file saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017a9690",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
