handling null values

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "c85e0908",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "dbf40dc2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "0acffb1e",
    "metadata": {},
    "outputs": [
@@ -57,10 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "f9084653",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipped 179016_keystrokes.txt (only 68 rows after deduplication)\n",
+      "Skipped 403193_keystrokes.txt (only 29 rows after deduplication)\n",
+      "Skipped 70903_keystrokes.txt (only 36 rows after deduplication)\n",
+      "Skipped 61412_keystrokes.txt (only 80 rows after deduplication)\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Process selected users only\n",
     "for file in selected_files:\n",
@@ -83,6 +94,11 @@
     "        ]\n",
     "    )\n",
     "\n",
+    "    #keep only rows where LETTER is not null\n",
+    "    df = df[df[\"LETTER\"].notna()]\n",
+    "\n",
+    "    #sample exactly 150 valid keystrokes\n",
+    "\n",
     "    if len(df) >= SAMPLES_PER_USER:\n",
     "        df_sampled = df.sample(n=SAMPLES_PER_USER, random_state=42)\n",
     "        all_users.append(df_sampled)\n",
@@ -92,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "dcf2cbf1",
    "metadata": {},
    "outputs": [
@@ -100,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final dataset shape after deduplication: (4500, 9)\n"
+      "Final dataset shape after deduplication: (3900, 9)\n"
      ]
     }
    ],
@@ -117,12 +133,14 @@
     "    ]\n",
     ")\n",
     "\n",
+    "final_df = final_df[final_df[\"LETTER\"].notna()]\n",
+    "\n",
     "print(\"Final dataset shape after deduplication:\", final_df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "839aa39c",
    "metadata": {},
    "outputs": [
@@ -147,8 +165,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "017a9690",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PARTICIPANT_ID     0\n",
+       "TEST_SECTION_ID    0\n",
+       "SENTENCE           0\n",
+       "USER_INPUT         0\n",
+       "KEYSTROKE_ID       0\n",
+       "PRESS_TIME         0\n",
+       "RELEASE_TIME       0\n",
+       "LETTER             0\n",
+       "KEYCODE            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70eff6ac",
    "metadata": {},
    "outputs": [],
    "source": []
