--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "dbf40dc2",
    "metadata": {},
    "outputs": [],
@@ -195,8 +195,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "70eff6ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure timestamps are numeric\n",
+    "final_df[\"PRESS_TIME\"] = pd.to_numeric(final_df[\"PRESS_TIME\"], errors=\"coerce\")\n",
+    "final_df[\"RELEASE_TIME\"] = pd.to_numeric(final_df[\"RELEASE_TIME\"], errors=\"coerce\")\n",
+    "\n",
+    "# Create HOLD_TIME feature\n",
+    "final_df[\"HOLD_TIME\"] = final_df[\"RELEASE_TIME\"] - final_df[\"PRESS_TIME\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "893c14e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_df[\"HOLD_TIME\"].isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cc167250",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((final_df[\"HOLD_TIME\"] < 0).sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e52b10c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    3900.000000\n",
+      "mean      126.944872\n",
+      "std       104.731410\n",
+      "min         8.000000\n",
+      "25%        89.000000\n",
+      "50%       113.000000\n",
+      "75%       143.000000\n",
+      "max      2949.000000\n",
+      "Name: HOLD_TIME, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_df[\"HOLD_TIME\"].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2bf3cc28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv(\n",
+    "    \"D:\\\\ML_project\\\\Keystrokes_dataset\\\\keystrokes_with_hold_time.csv\",\n",
+    "    index=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ccc72be1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.8.0-cp312-cp312-win_amd64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: numpy>=1.24.1 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn) (2.4.2)\n",
+      "Collecting scipy>=1.10.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.17.0-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "Collecting joblib>=1.3.0 (from scikit-learn)\n",
+      "  Downloading joblib-1.5.3-py3-none-any.whl.metadata (5.5 kB)\n",
+      "Collecting threadpoolctl>=3.2.0 (from scikit-learn)\n",
+      "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading scikit_learn-1.8.0-cp312-cp312-win_amd64.whl (8.0 MB)\n",
+      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.3/8.0 MB ? eta -:--:--\n",
+      "   ----- ---------------------------------- 1.0/8.0 MB 3.6 MB/s eta 0:00:02\n",
+      "   --------- ------------------------------ 1.8/8.0 MB 3.6 MB/s eta 0:00:02\n",
+      "   ------------- -------------------------- 2.6/8.0 MB 3.7 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 3.4/8.0 MB 3.7 MB/s eta 0:00:02\n",
+      "   -------------------- ------------------- 4.2/8.0 MB 3.7 MB/s eta 0:00:02\n",
+      "   ------------------------ --------------- 5.0/8.0 MB 3.7 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 5.8/8.0 MB 3.7 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 6.6/8.0 MB 3.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 7.3/8.0 MB 3.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 8.0/8.0 MB 3.6 MB/s eta 0:00:00\n",
+      "Downloading joblib-1.5.3-py3-none-any.whl (309 kB)\n",
+      "Downloading scipy-1.17.0-cp312-cp312-win_amd64.whl (36.3 MB)\n",
+      "   ---------------------------------------- 0.0/36.3 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.5/36.3 MB 4.2 MB/s eta 0:00:09\n",
+      "   - -------------------------------------- 1.0/36.3 MB 3.3 MB/s eta 0:00:11\n",
+      "   -- ------------------------------------- 1.8/36.3 MB 3.2 MB/s eta 0:00:11\n",
+      "   -- ------------------------------------- 2.6/36.3 MB 3.4 MB/s eta 0:00:11\n",
+      "   --- ------------------------------------ 3.4/36.3 MB 3.5 MB/s eta 0:00:10\n",
+      "   ---- ----------------------------------- 4.5/36.3 MB 3.7 MB/s eta 0:00:09\n",
+      "   ----- ---------------------------------- 5.2/36.3 MB 3.7 MB/s eta 0:00:09\n",
+      "   ------ --------------------------------- 6.0/36.3 MB 3.7 MB/s eta 0:00:09\n",
+      "   ------- -------------------------------- 6.8/36.3 MB 3.8 MB/s eta 0:00:08\n",
+      "   -------- ------------------------------- 7.6/36.3 MB 3.8 MB/s eta 0:00:08\n",
+      "   --------- ------------------------------ 8.7/36.3 MB 3.8 MB/s eta 0:00:08\n",
+      "   ---------- ----------------------------- 9.4/36.3 MB 3.8 MB/s eta 0:00:08\n",
+      "   ----------- ---------------------------- 10.2/36.3 MB 3.8 MB/s eta 0:00:07\n",
+      "   ------------ --------------------------- 11.0/36.3 MB 3.8 MB/s eta 0:00:07\n",
+      "   ------------ --------------------------- 11.8/36.3 MB 3.8 MB/s eta 0:00:07\n",
+      "   ------------ --------------------------- 11.8/36.3 MB 3.8 MB/s eta 0:00:07\n",
+      "   ------------ --------------------------- 11.8/36.3 MB 3.8 MB/s eta 0:00:07\n",
+      "   --------------- ------------------------ 13.9/36.3 MB 3.7 MB/s eta 0:00:07\n",
+      "   ---------------- ----------------------- 14.7/36.3 MB 3.7 MB/s eta 0:00:06\n",
+      "   ---------------- ----------------------- 15.2/36.3 MB 3.6 MB/s eta 0:00:06\n",
+      "   ----------------- ---------------------- 16.3/36.3 MB 3.7 MB/s eta 0:00:06\n",
+      "   ------------------ --------------------- 16.8/36.3 MB 3.6 MB/s eta 0:00:06\n",
+      "   ------------------- -------------------- 17.6/36.3 MB 3.6 MB/s eta 0:00:06\n",
+      "   -------------------- ------------------- 18.4/36.3 MB 3.6 MB/s eta 0:00:05\n",
+      "   --------------------- ------------------ 19.1/36.3 MB 3.6 MB/s eta 0:00:05\n",
+      "   --------------------- ------------------ 19.9/36.3 MB 3.6 MB/s eta 0:00:05\n",
+      "   ---------------------- ----------------- 20.7/36.3 MB 3.6 MB/s eta 0:00:05\n",
+      "   ----------------------- ---------------- 21.5/36.3 MB 3.6 MB/s eta 0:00:05\n",
+      "   ------------------------ --------------- 22.3/36.3 MB 3.6 MB/s eta 0:00:04\n",
+      "   ------------------------- -------------- 23.1/36.3 MB 3.6 MB/s eta 0:00:04\n",
+      "   -------------------------- ------------- 23.9/36.3 MB 3.6 MB/s eta 0:00:04\n",
+      "   -------------------------- ------------- 24.1/36.3 MB 3.6 MB/s eta 0:00:04\n",
+      "   --------------------------- ------------ 25.2/36.3 MB 3.6 MB/s eta 0:00:04\n",
+      "   ---------------------------- ----------- 26.2/36.3 MB 3.6 MB/s eta 0:00:03\n",
+      "   ----------------------------- ---------- 27.0/36.3 MB 3.6 MB/s eta 0:00:03\n",
+      "   ------------------------------ --------- 27.8/36.3 MB 3.6 MB/s eta 0:00:03\n",
+      "   ------------------------------- -------- 28.3/36.3 MB 3.6 MB/s eta 0:00:03\n",
+      "   ------------------------------- -------- 28.8/36.3 MB 3.6 MB/s eta 0:00:03\n",
+      "   ------------------------------- -------- 28.8/36.3 MB 3.6 MB/s eta 0:00:03\n",
+      "   --------------------------------- ------ 30.7/36.3 MB 3.6 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 31.7/36.3 MB 3.6 MB/s eta 0:00:02\n",
+      "   ----------------------------------- ---- 32.2/36.3 MB 3.6 MB/s eta 0:00:02\n",
+      "   ----------------------------------- ---- 32.2/36.3 MB 3.6 MB/s eta 0:00:02\n",
+      "   ------------------------------------ --- 33.0/36.3 MB 3.5 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 34.1/36.3 MB 3.6 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 34.9/36.3 MB 3.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  35.7/36.3 MB 3.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  36.2/36.3 MB 3.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 36.3/36.3 MB 3.5 MB/s eta 0:00:00\n",
+      "Downloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "Successfully installed joblib-1.5.3 scikit-learn-1.8.0 scipy-1.17.0 threadpoolctl-3.6.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 26.0\n",
+      "[notice] To update, run: C:\\Users\\USER\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9332a632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set shape: (3120, 1)\n",
+      "Testing set shape: (780, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Step 1: Select features and target\n",
+    "X = final_df[[\"HOLD_TIME\"]]    # you can add more features later\n",
+    "y = final_df[\"PARTICIPANT_ID\"]\n",
+    "\n",
+    "# Step 2: Train-test split (stratified)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X,\n",
+    "    y,\n",
+    "    test_size=0.20,        # 80% train, 20% test\n",
+    "    random_state=42,\n",
+    "    stratify=y             # VERY IMPORTANT\n",
+    ")\n",
+    "\n",
+    "# Step 3: Check shapes\n",
+    "print(\"Training set shape:\", X_train.shape)\n",
+    "print(\"Testing set shape:\", X_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3a4fbd5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Initialize the scaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit the scaler on the training data only\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "\n",
+    "# Transform the test data using the same scaler\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "20e1700d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training features mean: 1.1386902816668272e-18\n",
+      "Training features std: 1.0000000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training features mean:\", np.mean(X_train_scaled))\n",
+    "print(\"Training features std:\", np.std(X_train_scaled))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8d168e42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.07660121]\n",
+      " [ 0.17127859]\n",
+      " [ 0.17127859]\n",
+      " [-0.4632937 ]\n",
+      " [ 0.24068493]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example:\n",
+    "print(X_train_scaled[:5])  # First 5 scaled samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e94c5450",
    "metadata": {},
    "outputs": [],
    "source": []
