--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "c85e0908",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dbf40dc2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "0acffb1e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "f9084653",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "dcf2cbf1",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "839aa39c",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "017a9690",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "70eff6ac",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,19 @@
     "final_df[\"RELEASE_TIME\"] = pd.to_numeric(final_df[\"RELEASE_TIME\"], errors=\"coerce\")\n",
     "\n",
     "# Create HOLD_TIME feature\n",
-    "final_df[\"HOLD_TIME\"] = final_df[\"RELEASE_TIME\"] - final_df[\"PRESS_TIME\"]"
+    "final_df[\"HOLD_TIME\"] = final_df[\"RELEASE_TIME\"] - final_df[\"PRESS_TIME\"]\n",
+    "final_df[\"PRESS_PRESS\"] = final_df.groupby(\"PARTICIPANT_ID\")[\"PRESS_TIME\"].diff()\n",
+    "final_df[\"RELEASE_RELEASE\"] = final_df.groupby(\"PARTICIPANT_ID\")[\"RELEASE_TIME\"].diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0efe33ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = final_df.dropna()"
    ]
   },
   {
@@ -254,9 +266,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count    3900.000000\n",
-      "mean      126.944872\n",
-      "std       104.731410\n",
+      "count    3874.000000\n",
+      "mean      126.957666\n",
+      "std       104.973956\n",
       "min         8.000000\n",
       "25%        89.000000\n",
       "50%       113.000000\n",
@@ -267,7 +279,10 @@
     }
    ],
    "source": [
-    "print(final_df[\"HOLD_TIME\"].describe())\n"
+    "print(final_df[\"HOLD_TIME\"].describe())\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -285,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "ccc72be1",
    "metadata": {},
    "outputs": [
@@ -294,83 +309,11 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.8.0-cp312-cp312-win_amd64.whl.metadata (11 kB)\n",
-      "Requirement already satisfied: numpy>=1.24.1 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn) (2.4.2)\n",
-      "Collecting scipy>=1.10.0 (from scikit-learn)\n",
-      "  Downloading scipy-1.17.0-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
-      "Collecting joblib>=1.3.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.5.3-py3-none-any.whl.metadata (5.5 kB)\n",
-      "Collecting threadpoolctl>=3.2.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Downloading scikit_learn-1.8.0-cp312-cp312-win_amd64.whl (8.0 MB)\n",
-      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 0.3/8.0 MB ? eta -:--:--\n",
-      "   ----- ---------------------------------- 1.0/8.0 MB 3.6 MB/s eta 0:00:02\n",
-      "   --------- ------------------------------ 1.8/8.0 MB 3.6 MB/s eta 0:00:02\n",
-      "   ------------- -------------------------- 2.6/8.0 MB 3.7 MB/s eta 0:00:02\n",
-      "   ---------------- ----------------------- 3.4/8.0 MB 3.7 MB/s eta 0:00:02\n",
-      "   -------------------- ------------------- 4.2/8.0 MB 3.7 MB/s eta 0:00:02\n",
-      "   ------------------------ --------------- 5.0/8.0 MB 3.7 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 5.8/8.0 MB 3.7 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 6.6/8.0 MB 3.7 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 7.3/8.0 MB 3.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 8.0/8.0 MB 3.6 MB/s eta 0:00:00\n",
-      "Downloading joblib-1.5.3-py3-none-any.whl (309 kB)\n",
-      "Downloading scipy-1.17.0-cp312-cp312-win_amd64.whl (36.3 MB)\n",
-      "   ---------------------------------------- 0.0/36.3 MB ? eta -:--:--\n",
-      "    --------------------------------------- 0.5/36.3 MB 4.2 MB/s eta 0:00:09\n",
-      "   - -------------------------------------- 1.0/36.3 MB 3.3 MB/s eta 0:00:11\n",
-      "   -- ------------------------------------- 1.8/36.3 MB 3.2 MB/s eta 0:00:11\n",
-      "   -- ------------------------------------- 2.6/36.3 MB 3.4 MB/s eta 0:00:11\n",
-      "   --- ------------------------------------ 3.4/36.3 MB 3.5 MB/s eta 0:00:10\n",
-      "   ---- ----------------------------------- 4.5/36.3 MB 3.7 MB/s eta 0:00:09\n",
-      "   ----- ---------------------------------- 5.2/36.3 MB 3.7 MB/s eta 0:00:09\n",
-      "   ------ --------------------------------- 6.0/36.3 MB 3.7 MB/s eta 0:00:09\n",
-      "   ------- -------------------------------- 6.8/36.3 MB 3.8 MB/s eta 0:00:08\n",
-      "   -------- ------------------------------- 7.6/36.3 MB 3.8 MB/s eta 0:00:08\n",
-      "   --------- ------------------------------ 8.7/36.3 MB 3.8 MB/s eta 0:00:08\n",
-      "   ---------- ----------------------------- 9.4/36.3 MB 3.8 MB/s eta 0:00:08\n",
-      "   ----------- ---------------------------- 10.2/36.3 MB 3.8 MB/s eta 0:00:07\n",
-      "   ------------ --------------------------- 11.0/36.3 MB 3.8 MB/s eta 0:00:07\n",
-      "   ------------ --------------------------- 11.8/36.3 MB 3.8 MB/s eta 0:00:07\n",
-      "   ------------ --------------------------- 11.8/36.3 MB 3.8 MB/s eta 0:00:07\n",
-      "   ------------ --------------------------- 11.8/36.3 MB 3.8 MB/s eta 0:00:07\n",
-      "   --------------- ------------------------ 13.9/36.3 MB 3.7 MB/s eta 0:00:07\n",
-      "   ---------------- ----------------------- 14.7/36.3 MB 3.7 MB/s eta 0:00:06\n",
-      "   ---------------- ----------------------- 15.2/36.3 MB 3.6 MB/s eta 0:00:06\n",
-      "   ----------------- ---------------------- 16.3/36.3 MB 3.7 MB/s eta 0:00:06\n",
-      "   ------------------ --------------------- 16.8/36.3 MB 3.6 MB/s eta 0:00:06\n",
-      "   ------------------- -------------------- 17.6/36.3 MB 3.6 MB/s eta 0:00:06\n",
-      "   -------------------- ------------------- 18.4/36.3 MB 3.6 MB/s eta 0:00:05\n",
-      "   --------------------- ------------------ 19.1/36.3 MB 3.6 MB/s eta 0:00:05\n",
-      "   --------------------- ------------------ 19.9/36.3 MB 3.6 MB/s eta 0:00:05\n",
-      "   ---------------------- ----------------- 20.7/36.3 MB 3.6 MB/s eta 0:00:05\n",
-      "   ----------------------- ---------------- 21.5/36.3 MB 3.6 MB/s eta 0:00:05\n",
-      "   ------------------------ --------------- 22.3/36.3 MB 3.6 MB/s eta 0:00:04\n",
-      "   ------------------------- -------------- 23.1/36.3 MB 3.6 MB/s eta 0:00:04\n",
-      "   -------------------------- ------------- 23.9/36.3 MB 3.6 MB/s eta 0:00:04\n",
-      "   -------------------------- ------------- 24.1/36.3 MB 3.6 MB/s eta 0:00:04\n",
-      "   --------------------------- ------------ 25.2/36.3 MB 3.6 MB/s eta 0:00:04\n",
-      "   ---------------------------- ----------- 26.2/36.3 MB 3.6 MB/s eta 0:00:03\n",
-      "   ----------------------------- ---------- 27.0/36.3 MB 3.6 MB/s eta 0:00:03\n",
-      "   ------------------------------ --------- 27.8/36.3 MB 3.6 MB/s eta 0:00:03\n",
-      "   ------------------------------- -------- 28.3/36.3 MB 3.6 MB/s eta 0:00:03\n",
-      "   ------------------------------- -------- 28.8/36.3 MB 3.6 MB/s eta 0:00:03\n",
-      "   ------------------------------- -------- 28.8/36.3 MB 3.6 MB/s eta 0:00:03\n",
-      "   --------------------------------- ------ 30.7/36.3 MB 3.6 MB/s eta 0:00:02\n",
-      "   ---------------------------------- ----- 31.7/36.3 MB 3.6 MB/s eta 0:00:02\n",
-      "   ----------------------------------- ---- 32.2/36.3 MB 3.6 MB/s eta 0:00:02\n",
-      "   ----------------------------------- ---- 32.2/36.3 MB 3.6 MB/s eta 0:00:02\n",
-      "   ------------------------------------ --- 33.0/36.3 MB 3.5 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 34.1/36.3 MB 3.6 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 34.9/36.3 MB 3.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  35.7/36.3 MB 3.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  36.2/36.3 MB 3.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 36.3/36.3 MB 3.5 MB/s eta 0:00:00\n",
-      "Downloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
-      "Successfully installed joblib-1.5.3 scikit-learn-1.8.0 scipy-1.17.0 threadpoolctl-3.6.0\n"
+      "Requirement already satisfied: scikit-learn in c:\\users\\sanuv\\appdata\\roaming\\python\\python310\\site-packages (1.7.2)\n",
+      "Requirement already satisfied: numpy>=1.22.0 in c:\\users\\sanuv\\appdata\\roaming\\python\\python310\\site-packages (from scikit-learn) (2.2.6)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in c:\\users\\sanuv\\appdata\\roaming\\python\\python310\\site-packages (from scikit-learn) (1.15.3)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\sanuv\\appdata\\roaming\\python\\python310\\site-packages (from scikit-learn) (1.5.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\sanuv\\appdata\\roaming\\python\\python310\\site-packages (from scikit-learn) (3.6.0)\n"
      ]
     },
     {
@@ -378,8 +321,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 25.0.1 -> 26.0\n",
-      "[notice] To update, run: C:\\Users\\USER\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+      "[notice] A new release of pip is available: 25.2 -> 26.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -389,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "9332a632",
    "metadata": {},
    "outputs": [
@@ -397,8 +340,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set shape: (3120, 1)\n",
-      "Testing set shape: (780, 1)\n"
+      "Training set shape: (3099, 3)\n",
+      "Testing set shape: (775, 3)\n"
      ]
     }
    ],
@@ -407,7 +350,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Step 1: Select features and target\n",
-    "X = final_df[[\"HOLD_TIME\"]]    # you can add more features later\n",
+    "X = final_df[[\"HOLD_TIME\", \"PRESS_PRESS\", \"RELEASE_RELEASE\"]]\n",
     "y = final_df[\"PARTICIPANT_ID\"]\n",
     "\n",
     "# Step 2: Train-test split (stratified)\n",
@@ -426,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "3a4fbd5d",
    "metadata": {},
    "outputs": [],
@@ -445,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "20e1700d",
    "metadata": {},
    "outputs": [
@@ -453,8 +396,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training features mean: 1.1386902816668272e-18\n",
-      "Training features std: 1.0000000000000002\n"
+      "Training features mean: -1.490328422859197e-17\n",
+      "Training features std: 1.0\n"
      ]
     }
    ],
@@ -465,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "id": "8d168e42",
    "metadata": {},
    "outputs": [
@@ -473,11 +416,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.07660121]\n",
-      " [ 0.17127859]\n",
-      " [ 0.17127859]\n",
-      " [-0.4632937 ]\n",
-      " [ 0.24068493]]\n"
+      "[[-0.27977284 -0.09757644 -0.09776457]\n",
+      " [-0.48367231  0.17909714  0.17889328]\n",
+      " [ 0.98794998 -1.29391326 -1.29415469]\n",
+      " [-0.30636842  0.88763801  0.88708465]\n",
+      " [-0.56345906 -0.15328024 -0.15401885]]\n"
      ]
     }
    ],
@@ -488,8 +431,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "a0499cc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best k: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import numpy as np\n",
+    "\n",
+    "k_values = range(1, 16)\n",
+    "accuracies = []\n",
+    "\n",
+    "for k in k_values:\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "    knn.fit(X_train_scaled, y_train)\n",
+    "    y_pred = knn.predict(X_test_scaled)\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    accuracies.append(acc)\n",
+    "\n",
+    "best_k = k_values[np.argmax(accuracies)]\n",
+    "print(\"Best k:\", best_k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "11713594",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final accuracy: 0.11483870967741935\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_final = KNeighborsClassifier(n_neighbors=best_k)\n",
+    "knn_final.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_final_pred = knn_final.predict(X_test_scaled)\n",
+    "final_accuracy = accuracy_score(y_test, y_final_pred)\n",
+    "\n",
+    "print(\"Final accuracy:\", final_accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e94c5450",
+   "id": "32554610",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -511,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
